[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Particle.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameOverText.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://14970480729910.jpg" type="Texture" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )
ParticleScene = ExtResource( 2 )
GameOverScene = ExtResource( 3 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 495, 270 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 489.796, 265.781 )
texture = ExtResource( 6 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="emit_electron" from="Player" to="." method="_on_Player_emit_electron"]
[connection signal="emit_green" from="Player" to="." method="_on_Player_emit_green"]
[connection signal="emit_particle" from="Player" to="." method="_on_Player_emit_particle"]
